staticfiles/css/style.css
body {
    background-color: #F9FAFC;
}

.brand {
    font-family: Lato, sans-serif;
    font-size: 1.4rem;
    font-weight: 700;
    color: #4A4A4F;
}

.Blue-o {
    color: #34A426;
}

.thin {
    font-weight: 300;
}

.light-bg {
    background-color: #fff;
}

.dark-bg {
    background-color: #445261;
}

.main-bg {
    background-color: #F9FAFC;
}

.card {
    border: none;
    background-color: transparent;
}

.image-container {
    position: relative;
}

.image-flash {
    position: absolute;
    bottom: 5%;
    min-width: 30%;
    left: -2px;
    background-color: #3C8CA7;
}

.scale {
    width: 100%;
    height: auto;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
}

.author {
    color: white;
    margin: 4px;
    text-transform: uppercase;
}

.masthead {
    margin-top: 10px;
    overflow: hidden;
    position: relative;
    display: inline-block;
    height: 33vh;
    width: 100%;
}

.masthead-text {
    background-color: #3C8CA7;
    color: white;
    position: relative;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
}

.masthead-image {
    position: relative;
    overflow: hidden;
}

.masthead-image:after {
    content: "";
    position: absolute;
    top: 0;
    right: 90%;
    height: 100%;
    width: 150%;
    background: #3C8CA7;
    -webkit-transform: skew(15deg);
    -moz-transform: skew(15deg);
    transform: skew(15deg);
    z-index: 100;
}

.profile-image {
    width: 85%;
}

.post-link {
    text-decoration: none;
    color: #48817A;
}

.post-link:hover,
.page-link {
    color: #34A426;
}

/* .page-link {
    border-radius: 5px;
} */

.post-title {
    margin-top: 10%;
    margin-left: 5%;
}

.post-subtitle {
    margin-left: 5%;
    color: lightgray;
}

.btn-signup,
.btn-edit, 
.btn-style,
.btn-secondary {
    background-color: #3C8CA7;
    color: #fff;
}

.btn-signup:hover,
.btn-signup:active,
.btn-style:active,
.btn-style:hover,
.btn-secondary:hover,
.btn-secondary:active {
    background-color: #fff;
    color: #34A426;
}

.link {
    color: #23BBBB;
    text-decoration: none;
}

.link:hover,
.link:active {
    color: #445261;
    text-decoration: underline;
}

.btn-like {
    color: rgb(255, 0, 0);
    border: none;
    background: transparent;
}

.btn-delete {
    color: #fff;
    background: #f00f1b;
}

.btn-like:hover,
.btn-like:active {
    color: #ff0000;
    background: transparent;
    border: none;
}

.faded {
    color: rgb(172, 175, 175);
}

.approval {
    color: rgb(222, 146, 168);
}

.asteriskField {
    display: none;
}

.coment-style {
   color: #34A426;
}

.notification-text {
    color: #34A426;
}

.success {
    background-color: #34A426;
    color: white;
}

/* Hero image */

.hero-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/images/hero-img.jpg");
    height: 400px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
}

.hero-text {
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
  }

  .hero-slogan {
    text-shadow: 2px 2px 2px #34A426;
  }

  .hero-btn{
    background-color: #3C8CA7;
    color: #fff;
    padding: .375rem .75rem;
    text-decoration: none;
  }

  .btn-add-post:hover,
  .btn-add-post:active {
    background-color: #fff;
    color: #34A426;
    cursor: pointer;
}

/* User Images */

.image-size {
   /* display: block; */
   object-fit: cover;
   object-position: center; 
   width: 100%;
   height: 100%;
}

.img-container{
    object-fit: contain;
    height: 30vw;
}

/* footer */

.social-container a {
    text-decoration: none;
    font-size: larger ;
}

.social-container i {
    color: #34A426;
    transition: all 0.2s ease-in-out;
}

.social-container i:hover {
    transform: scale(1.3);
}

